--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>HostCodes ~ Um jeito de falar sobre hosts sem censura</title>
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+	<style type="text/css">
+		* {
+			color: #1e272e;
+			font-size: 2vw;
+			font-family: 'Indie Flower', cursive;
+		}
 
+		span {
+			color: #3498db;
+		}
+
+		body {
+			background-color: #ecf0f1;
+		}
+
+		li {
+			list-style: none;
+		}
+	</style>
+</head>
+<body>
+	<center>
+		<h2>HostCodes</h2><p>Um jeito de falar sobre hosts sem censura</p>
+		<ul>
+			<li>BattleHost <span>»</span> B</li>
+			<li>VirtusHost <span>»</span> V </li>
+			<li>HypeHost <span>»</span> H </li>
+			<li>EnxadaHost <span>»</span> E </li>
+			<li>BlastHosting <span>»</span> BL </li>
+			<li>PhantomHost <span>»</span> P </li>
+			<li>UltraHostBR <span>»</span> UBR </li>
+			<li>LostOnyx <span>»</span> L </li>
+			<li>ReisHosting <span>»</span> R </li>
+		</ul>
+	</center>
+</body>
+</html>
