--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
 	<center>
 		<h2>HostCodes</h2><p>Um jeito de falar sobre hosts sem censura</p>
 		<ul>
-			<li>BattleHost <span>»</span> B</li>
-			<li>VirtusHost <span>»</span> V </li>
-			<li>HypeHost <span>»</span> H </li>
-			<li>EnxadaHost <span>»</span> E </li>
+			<li>BattleHost <span>»</span> BH</li>
+			<li>VirtusHost <span>»</span> VH </li>
+			<li>HypeHost <span>»</span> HH </li>
+			<li>EnxadaHost <span>»</span> EH </li>
 			<li>BlastHosting <span>»</span> BL </li>
-			<li>PhantomHost <span>»</span> P </li>
+			<li>PhantomHost <span>»</span> PH </li>
 			<li>UltraHostBR <span>»</span> UBR </li>
-			<li>LostOnyx <span>»</span> L </li>
-			<li>ReisHosting <span>»</span> R </li>
+			<li>LostOnyx <span>»</span> LH </li>
+			<li>ReisHosting <span>»</span> RH </li>
+			<li>FantasyHosting <span>»</span> FH </li>
+			<li>PurpleHost <span>»</span> PH </li>
 		</ul>
 	</center>
 </body>
