--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			<li>ReisHosting <span>»</span> RH </li>
 			<li>FantasyHosting <span>»</span> FH </li>
 			<li>PurpleHost <span>»</span> PH </li>
+			<li>VoxyHosting <span>»</span> VH </li>
 		</ul>
 	</center>
 </body>
