--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			<li>FantasyHosting <span>»</span> FH </li>
 			<li>PurpleHost <span>»</span> PH </li>
 			<li>VoxyHosting <span>»</span> VH </li>
+			<li>PremiumHosting <span>»</span> PH-Z </li>
 		</ul>
 	</center>
 </body>
