--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			<li>PurpleHost <span>»</span> PH </li>
 			<li>VoxyHosting <span>»</span> VH </li>
 			<li>PremiumHosting <span>»</span> PH-Z </li>
+			<li>DLHosting <span>»</span> DLH </li>
 		</ul>
 	</center>
 </body>
