--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<li>EnxadaHost <span>»</span> EH </li>
 			<li>BlastHosting <span>»</span> BL </li>
 			<li>UltraHostBR <span>»</span> UBR </li>
-			<li>LostOnyx <span>»</span> LH </li>
+			<li>LostOnyx <span>»</span> LO </li>
 			<li>ReisHosting <span>»</span> RH </li>
 			<li>FantasyHosting <span>»</span> FH </li>
 			<li>PurpleHost <span>»</span> PH </li>
