Removido hosts fechadas

--- a/index.html
+++ b/index.html
@@ -28,18 +28,14 @@
 		<h2>HostCodes</h2><p>Um jeito de falar sobre hosts sem censura</p>
 		<ul>
 			<li>BattleHost <span>»</span> BH</li>
-			<li>VirtusHost <span>»</span> VH </li>
 			<li>HypeHost <span>»</span> HH </li>
 			<li>EnxadaHost <span>»</span> EH </li>
 			<li>BlastHosting <span>»</span> BL </li>
 			<li>UltraHostBR <span>»</span> UBR </li>
 			<li>LostOnyx <span>»</span> LO </li>
 			<li>ReisHosting <span>»</span> RH </li>
-			<li>FantasyHosting <span>»</span> FH </li>
 			<li>PurpleHost <span>»</span> PH </li>
-			<li>VoxyHosting <span>»</span> VH </li>
-			<li>PremiumHosting <span>»</span> PH-Z </li>
-			<li>DLHosting <span>»</span> DLH </li>
+			<li>PremiumHosting <span>»</span> PHZ </li>
 		</ul>
 	</center>
 </body>
